[gd_scene load_steps=3 format=3 uid="uid://dmntcrv8d3sfb"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_6sexx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_winwb"]
bg_color = Color(0, 0.0313726, 0.290196, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.325218, 0.116424, 0.409541, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 64.0
offset_right = 8.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6sexx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -26.0
offset_top = -120.0
offset_right = 403.0
offset_bottom = 771.0
color = Color(0.45098, 0.45098, 0.45098, 0.686275)

[node name="Start_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -233.0
offset_right = -292.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_winwb")
text = "Start Game"

[node name="Load_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -113.0
offset_right = -292.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_winwb")
text = "Load"

[node name="Save_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = 7.0
offset_right = -292.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_winwb")
text = "Save"

[node name="Exit_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = 127.0
offset_right = -292.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_winwb")
text = "Exit"

[node name="Continue_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -353.0
offset_right = -292.0
offset_bottom = -245.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_winwb")
text = "Continue"

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Load_Button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Save_Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Continue_Button" to="." method="_on_continue_button_pressed"]
